# QuantResearch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
quantresearch/: __init__.py  config.py  logger.py
quantresearch/analytics/: __init__.py  analyzer.py  metrics.py
quantresearch/backtest/: __init__.py  engine.py  result.py
quantresearch/data/: validator.py  yahoo.py
quantresearch/execution/: __init__.py  executor.py
quantresearch/indicators/: __init__.py  moving_average.py
quantresearch/orders/: __init__.py  order.py
quantresearch/portfolio/: portfolio.py
quantresearch/signals/: __init__.py  crossover.py  signal.py
quantresearch/strategy/: __init__.py  base.py
scripts/: test_yahoo.py
tests/: test_backtest_engine.py  test_backtest_result.py  test_crossover.py  test_execution.py  test_metrics.py  test_moving_average.py  test_order.py  test_performance_analyzer.py  test_portfolio.py  test_signal.py  test_strategy.py  test_validator.py  test_yahoo.py
