[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "quantresearch"
version = "0.1.0"
description = "A quantitative research platform for systematic trading strategies"
authors = [
    {name = "Nan Jiang"}
]
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "yfinance",
    "tqdm",
    "joblib"
]


[tool.setuptools.packages.find]
include = ["quantresearch*"]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.black]
line-length = 88


[tool.ruff]
line-length = 88